--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -60,6 +60,9 @@
     <!-- header ends here -->
 
     <div class="container py-md-5">
+      <% errors.forEach(errMsg => { %>
+      <div class="text-center alert alert-danger"><%= errMsg %></div>
+      <% }) %>
       <div class="row align-items-center">
         <div class="col-lg-7 py-3 py-md-5">
           <h1 class="display-3">Remember Writing?</h1>
