--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -75,6 +75,9 @@
         </div>
         <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
           <form action="/register" method="POST" id="registration-form">
+            <% regErrors.forEach( error => { %>
+            <div class="alert alert-danger small"><%= error %></div>
+            <% })%>
             <div class="form-group">
               <label for="username-register" class="text-muted mb-1"
                 ><small>Username</small></label
