--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -2,8 +2,8 @@
 
     <div class="container py-md-5 container--narrow">
       <div class="text-center">
-        <h2>Hello <strong><%= username %></strong>, your feed is empty.</h2>
-        <p class="small">Avatar <i>(Testausgabe)</i>: <%= avatar %></p>
+        <h2>Hello <strong><%= user.username %></strong>, your feed is empty.</h2>
+        <p class="small">Avatar <i>(Testausgabe)</i>: <%= user.avatar %></p>
         <p class="lead text-muted">
           Your feed displays the latest posts from the people you follow. If you
           don&rsquo;t have any friends to follow that&rsquo;s okay; you can use
