--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -53,7 +53,7 @@
               data-toggle="tooltip"
               data-placement="bottom"
               style="width: 32px; height: 32px; border-radius: 16px;"
-              src="<%= avatar %>"
+              src="<%= user.avatar %>"
           /></a>
           <a class="btn btn-sm btn-success mr-2" href="/create-post"
             >Create Post</a
@@ -64,3 +64,5 @@
         </div>
       </div>
     </header>
+  </body>
+</html>
