--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -2,7 +2,7 @@
 
 <div class="container py-md-5 container--narrow">
   <div class="d-flex justify-content-between">
-    <h2>Example Post Title Here</h2>
+    <h2><%= post.title %></h2>
     <span class="pt-2">
       <a
         href="#"
@@ -31,23 +31,13 @@
         class="avatar-tiny"
         src="https://gravatar.com/avatar/f64fc44c03a8a7eb1d52502950879659?s=128"
     /></a>
-    Posted by <a href="#">kittydoe</a> on 2/3/2019
+    Posted by <a href="#">[Id: <%= post.Author %>]</a> on <%=
+    post.createdDate.toLocaleDateString() %> <%=
+    post.createdDate.toLocaleTimeString() %>
   </p>
 
   <div class="body-content">
-    <p>My roommate yells at me when I destroy things, but I do what I want.</p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-      praesentium laboriosam unde fuga accusamus reiciendis laudantium quis
-      consequatur, beatae temporibus nemo, tempora voluptatum, perspiciatis
-      accusantium ullam molestiae cupiditate incidunt architecto.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-      praesentium laboriosam unde fuga accusamus reiciendis laudantium quis
-      consequatur, beatae temporibus nemo, tempora voluptatum, perspiciatis
-      accusantium ullam molestiae cupiditate incidunt architecto.
-    </p>
+    <p><%= post.body %></p>
   </div>
 </div>
 
