--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -26,12 +26,8 @@
   </div>
 
   <p class="text-muted small mb-4">
-    <a href="#"
-      ><img
-        class="avatar-tiny"
-        src="https://gravatar.com/avatar/f64fc44c03a8a7eb1d52502950879659?s=128"
-    /></a>
-    Posted by <a href="#">[Id: <%= post.Author %>]</a> on <%=
+    <a href="#"><img class="avatar-tiny" src="<%= post.author.avatar %>"/></a>
+    Posted by <a href="#"><%= post.author.username %></a> on <%=
     post.createdDate.toLocaleDateString() %> <%=
     post.createdDate.toLocaleTimeString() %>
   </p>
