--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,36 +19,17 @@
   </div>
 
   <div class="list-group">
+    <% posts.forEach(post => { %>
     <a
-      href="/post/5c3af3dcc7d0ad0004e53b3d"
+      href="/post/<%= post._id %>"
       class="list-group-item list-group-item-action"
     >
-      <img
-        class="avatar-tiny"
-        src="https://gravatar.com/avatar/b9408a09298632b5151200f3449434ef?s=128"
-      />
-      <strong>Example Post #1</strong> on 0/13/2019
+      <img class="avatar-tiny" src="<%= post.author.avatar %>" />
+      <strong><%= post.title %></strong> on <%=
+      post.createdDate.toLocaleDateString() %> <%=
+      post.createdDate.toLocaleTimeString() %>
     </a>
-    <a
-      href="/post/5c3af3dcc7d0ad0004e53b3d"
-      class="list-group-item list-group-item-action"
-    >
-      <img
-        class="avatar-tiny"
-        src="https://gravatar.com/avatar/b9408a09298632b5151200f3449434ef?s=128"
-      />
-      <strong>Example Post #2</strong> on 0/13/2019
-    </a>
-    <a
-      href="/post/5c3af3dcc7d0ad0004e53b3d"
-      class="list-group-item list-group-item-action"
-    >
-      <img
-        class="avatar-tiny"
-        src="https://gravatar.com/avatar/b9408a09298632b5151200f3449434ef?s=128"
-      />
-      <strong>Example Post #3</strong> on 0/13/2019
-    </a>
+    <% }) %>
   </div>
 </div>
 
