--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -1,7 +1,13 @@
 <%- include('includes/header') %>
 
 <div class="container py-md-5 container--narrow">
-  <form action="/create-post" method="POST">
+  <% errors.forEach(errMsg => { %>
+  <div class="text-center alert alert-danger"><%= errMsg %></div>
+  <% }) %> <% success.forEach(errMsg => { %>
+  <div class="text-center alert alert-success"><%= errMsg %></div>
+  <% }) %>
+
+  <form action="/post/<%= post._id %>/edit" method="POST">
     <div class="form-group">
       <label for="post-title" class="text-muted mb-1"
         ><small>Title</small></label
