--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -1,9 +1,8 @@
 <%- include('includes/header') %>
 
 <div class="container py-md-5">
-  <% errors.forEach(errMsg => { %>
-  <div class="text-center alert alert-danger"><%= errMsg %></div>
-  <% }) %>
+  <%- include('includes/flash') %>
+
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
       <h1 class="display-3">Remember Writing?</h1>
