--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -3,7 +3,11 @@
 <div class="container py-md-5 container--narrow">
   <%- include('includes/flash') %>
 
-  <form action="/post/<%= post._id %>/edit" method="POST">
+  <a class="small font-weight-bold" href="/post/<%= post._id %>"
+    >&laquo; Back</a
+  >
+
+  <form class="mt-3" action="/post/<%= post._id %>/edit" method="POST">
     <div class="form-group">
       <label for="post-title" class="text-muted mb-1"
         ><small>Title</small></label
