--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -34,9 +34,14 @@
   </div>
 
   <p class="text-muted small mb-4">
-    <a href="#"><img class="avatar-tiny" src="<%= post.author.avatar %>"/></a>
-    Posted by <a href="#"><%= post.author.username %></a> on <%=
-    post.createdDate.toLocaleDateString() %> <%=
+    <a href="/profile/<%= post.author.username %>"
+      ><img class="avatar-tiny" src="<%= post.author.avatar %>"
+    /></a>
+    Posted by
+    <a href="/profile/<%= post.author.username %>"
+      ><%= post.author.username %></a
+    >
+    on <%= post.createdDate.toLocaleDateString() %> <%=
     post.createdDate.toLocaleTimeString() %>
   </p>
 
