--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,18 @@
 
   <h2>
     <img class="avatar-small" src="<%= profileAvatar %>" />
-    <%= profileUsername %>
+    <%= profileUsername %> <% if (user) { if (isFollowing) { %>
+    <form
+      class="ml-2 d-inline"
+      action="/stopFollow/<%= profileUsername %>"
+      method="POST"
+    >
+      <button class="btn btn-danger btn-sm">
+        Stop Following <i class="fas fa-user-times"></i>
+      </button>
+    </form>
+
+    <% } else { %>
     <form
       class="ml-2 d-inline"
       action="/addFollow/<%= profileUsername %>"
@@ -14,8 +25,8 @@
       <button class="btn btn-primary btn-sm">
         Follow <i class="fas fa-user-plus"></i>
       </button>
-      <!-- <button class="btn btn-danger btn-sm">Stop Following <i class="fas fa-user-times"></i></button> -->
     </form>
+    <% } } %>
   </h2>
 
   <div class="profile-nav nav nav-tabs pt-2 mb-4">
