--- a/views/profile-followers.ejs
+++ b/views/profile-followers.ejs
@@ -4,15 +4,13 @@
   <%- include('includes/flash') %> <%- include('includes/profileShared') %>
 
   <div class="list-group">
-    <% posts.forEach(post => { %>
+    <% followers.forEach(follower => { %>
     <a
-      href="/post/<%= post._id %>"
+      href="/profile/<%= follower.username %>"
       class="list-group-item list-group-item-action"
     >
-      <img class="avatar-tiny" src="<%= post.author.avatar %>" />
-      <strong><%= post.title %></strong> on <%=
-      post.createdDate.toLocaleDateString() %> <%=
-      post.createdDate.toLocaleTimeString() %>
+      <img class="avatar-tiny" src="<%= follower.avatar %>" />
+      <%= follower.username %>
     </a>
     <% }) %>
   </div>
