--- a/views/includes/profileShared.ejs
+++ b/views/includes/profileShared.ejs
@@ -28,17 +28,17 @@
 <div class="profile-nav nav nav-tabs pt-2 mb-4">
   <a
     href="/profile/<%= profileUsername %>"
-    class="profile-nav-link nav-item nav-link active"
+    class="profile-nav-link nav-item nav-link <%= currentPage == 'posts' ? 'active' : '' %>"
     >Posts: 3</a
   >
   <a
     href="/profile/<%= profileUsername %>/followers"
-    class="profile-nav-link nav-item nav-link "
+    class="profile-nav-link nav-item nav-link <%= currentPage == 'followers' ? 'active' : '' %>"
     >Followers: 3</a
   >
   <a
     href="/profile/<%= profileUsername %>/following"
-    class="profile-nav-link nav-item nav-link "
+    class="profile-nav-link nav-item nav-link <%= currentPage == 'following' ? 'active' : '' %>"
     >Following: 2</a
   >
 </div>
