Working on follow user: show number of displayed records on each tab header

--- a/views/includes/profileShared.ejs
+++ b/views/includes/profileShared.ejs
@@ -29,16 +29,16 @@
   <a
     href="/profile/<%= profileUsername %>"
     class="profile-nav-link nav-item nav-link <%= currentPage == 'posts' ? 'active' : '' %>"
-    >Posts: 3</a
+    >Posts: <%= counts.postsCount %></a
   >
   <a
     href="/profile/<%= profileUsername %>/followers"
     class="profile-nav-link nav-item nav-link <%= currentPage == 'followers' ? 'active' : '' %>"
-    >Followers: 3</a
+    >Followers: <%= counts.followersCount %></a
   >
   <a
     href="/profile/<%= profileUsername %>/following"
     class="profile-nav-link nav-item nav-link <%= currentPage == 'following' ? 'active' : '' %>"
-    >Following: 2</a
+    >Following: <%= counts.followingCount %></a
   >
 </div>
