--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -2,7 +2,27 @@
 
 <div class="container py-md-5 container--narrow">
   <%- include('includes/flash') %>
+  <!--  -->
+  <% if (posts.length) { %>
+  <h2 class="text-center mb-4">The Latest From Those You Follow</h2>
+  <div class="list-group">
+    <% posts.forEach(post => { %>
+    <a
+      href="/post/<%= post._id %>"
+      class="list-group-item list-group-item-action"
+    >
+      <img class="avatar-tiny" src="<%= post.author.avatar %>" />
+      <strong><%= post.title %></strong
+      ><span class="text-muted small">
+        by <%= post.author.username %> on <%=
+        post.createdDate.toLocaleDateString() %> <%=
+        post.createdDate.toLocaleTimeString() %>
+      </span>
+    </a>
+    <% }) %>
+  </div>
 
+  <% } else { %>
   <div class="text-center">
     <h2>Hello <strong><%= user.username %></strong>, your feed is empty.</h2>
     <p class="small">Avatar <i>(Testausgabe)</i>: <%= user.avatar %></p>
@@ -13,6 +33,7 @@
       by people with similar interests and then follow them.
     </p>
   </div>
+  <% } %>
 </div>
 
 <%- include('includes/footer') %>
