--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -7,6 +7,7 @@
 
   <% if (user) { %>
     <div id="chat-wrapper" class="chat-wrapper shadow border-top border-left border-right"></div>
+    <script src="/socket.io/socket.io.js"></script>
   <% } %>
   
   <script
